# ChangeLog for sci-libs/csparse
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/csparse/Attic/ChangeLog,v 1.3 2009/11/21 07:15:59 bicatali Exp $

*csparse-2.2.3 (21 Nov 2009)

  21 Nov 2009; Sébastien Fabbro <bicatali@gentoo.org>
  -csparse-2.2.2.ebuild, +csparse-2.2.3.ebuild:
  Version bump

*csparse-2.2.2 (09 Mar 2009)
*csparse-2.2.1-r1 (09 Mar 2009)

  09 Mar 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +files/csparse-2.2.2-autotools.patch, -csparse-2.2.1.ebuild,
  +csparse-2.2.1-r1.ebuild, +csparse-2.2.2.ebuild:
  Version bump. Fixed collision with cxsparse, rse, fixing bug #246589

*csparse-2.2.1 (05 Feb 2008)

  05 Feb 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +files/csparse-2.2.1-autotools.patch, +metadata.xml,
  +csparse-2.2.1.ebuild:
  Initial import, part of the suitesparse
