@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/csparse/Attic/csparse-2.2.3.ebuild,v 1.1 2009/11/21 07:15:59 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/csparse/Attic/csparse-2.2.3.ebuild,v 1.2 2010/12/25 18:50:31 bicatali Exp $
 
 EAPI=2
 inherit autotools eutils
@@ -13,7 +13,7 @@ SRC_URI="http://www.cise.ufl.edu/research/sparse/${MY_PN}/versions/${MY_PN}-${PV
 LICENSE="LGPL-2.1"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE=""
+IUSE="static-libs"
 DEPEND=""
 RDEPEND=""
 
@@ -26,7 +26,9 @@ src_prepare() {
 
 src_configure() {
 	# avoid collision with cxsparse
-	econf --includedir="/usr/include/csparse"
+	econf \
+		--includedir="/usr/include/csparse" \
+		$(use_enable static-libs static)
 }
 
 src_install() {
